distribution/kustomize/base/ext-auth/kubeflow-api-auth/deployment.now.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeflow-api-auth
  labels:
    app: kubeflow-api-auth
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3002
  selector:
    app: kubeflow-api-auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-api-auth
spec:
  selector:
    matchLabels:
      app: kubeflow-api-auth
  template:
    metadata:
      labels:
        app: kubeflow-api-auth
    spec:
      serviceAccountName: kubeflow-api-auth
      containers:
        - image: ghcr.io/tidunguyen/kubeflow-api-auth
          imagePullPolicy: Always
          name: kubeflow-api-auth
          ports:
            - containerPort: 3002
        - name: db
          image: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: db
          imagePullPolicy: IfNotPresent
      volumes:
        # - name: container-registry-config
        #   configMap:
        #     name: kubeflow-notebook-ci
        #     items:
        #       - key: config.yml
        #         path: config.yml
        # - name: container-registry-data
        #   emptyDir: {}
        - name: db
          emptyDir: {}
      # persistentVolumeClaim:
      #   claimName: kubeflow-notebook-ci
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
